k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 

kind: Ingress 

metadata: 

  name: my-ingress

  namespace: prod  

  annotations: 

    nginx.ingress.kubernetes.io/rewrite-target: / 

spec: 

  ingressClassName: nginx 

  rules: 

    - host: aa607a2aded794266b0c3bc31628891d-1410940886.ap-south-1.elb.amazonaws.com

      http: 

        paths: 

          - path: / 

            pathType: Prefix 

            backend: 

              service: 

                name: app-service

                port: 

                  number: 80
